[gd_scene load_steps=23 format=2]

[ext_resource path="res://Scripts/Slime Editor.gd" type="Script" id=1]
[ext_resource path="res://Resources/UI/kenneyUI-blue.tres" type="Theme" id=2]
[ext_resource path="res://Scenes/Entities/Bob.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Entities/Glitch.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Entities/Slime.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxTexture" id=17]
margin_left = 7.0
expand_margin_right = 8.0

[node name="HBox" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Entities" type="VBoxContainer" parent="."]
margin_right = 212.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="Entity_List" type="ItemList" parent="Entities"]
margin_right = 212.0
margin_bottom = 252.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="SaveLoad" type="VBoxContainer" parent="Entities"]
margin_top = 256.0
margin_right = 212.0
margin_bottom = 360.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top_Margin" type="Panel" parent="Entities/SaveLoad"]
margin_right = 212.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="Save_Load" type="HBoxContainer" parent="Entities/SaveLoad"]
margin_top = 4.0
margin_right = 212.0
margin_bottom = 100.0

[node name="Save_Load" type="VBoxContainer" parent="Entities/SaveLoad/Save_Load"]
margin_right = 61.0
margin_bottom = 96.0

[node name="Save" type="Button" parent="Entities/SaveLoad/Save_Load/Save_Load"]
margin_right = 61.3241
margin_bottom = 46.251
size_flags_horizontal = 3
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load" type="Button" parent="Entities/SaveLoad/Save_Load/Save_Load"]
margin_top = 50.0
margin_right = 61.3241
margin_bottom = 96.251
size_flags_horizontal = 3
text = "Load"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Add_Remove" type="VBoxContainer" parent="Entities/SaveLoad/Save_Load"]
margin_left = 65.0
margin_right = 127.0
margin_bottom = 96.0
size_flags_horizontal = 3

[node name="Add" type="Button" parent="Entities/SaveLoad/Save_Load/Add_Remove"]
margin_right = 62.0
margin_bottom = 46.251
text = "+"

[node name="Remove" type="Button" parent="Entities/SaveLoad/Save_Load/Add_Remove"]
margin_top = 50.0
margin_right = 62.0
margin_bottom = 96.251
text = "-"

[node name="Rename_Exit" type="VBoxContainer" parent="Entities/SaveLoad/Save_Load"]
margin_left = 131.0
margin_right = 212.0
margin_bottom = 96.0
size_flags_horizontal = 3

[node name="Rename" type="Button" parent="Entities/SaveLoad/Save_Load/Rename_Exit"]
margin_right = 81.3241
margin_bottom = 46.251
text = "Rename"

[node name="Exit" type="Button" parent="Entities/SaveLoad/Save_Load/Rename_Exit"]
margin_top = 50.0
margin_right = 81.0
margin_bottom = 96.251
text = "Exit"

[node name="Bottom_Margin" type="HBoxContainer" parent="Entities/SaveLoad"]
margin_top = 104.0
margin_right = 212.0
margin_bottom = 104.0
size_flags_vertical = 3

[node name="Details" type="VBoxContainer" parent="."]
margin_left = 216.0
margin_right = 640.0
margin_bottom = 360.0
size_flags_horizontal = 3

[node name="Stats_and_Texture" type="HBoxContainer" parent="Details"]
margin_right = 424.0
margin_bottom = 178.0
size_flags_vertical = 3

[node name="Stats" type="PanelContainer" parent="Details/Stats_and_Texture"]
margin_right = 210.0
margin_bottom = 178.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )

[node name="Stats_Container" type="HBoxContainer" parent="Details/Stats_and_Texture/Stats"]
margin_left = 2.0
margin_top = 2.0
margin_right = 208.0
margin_bottom = 176.0

[node name="Left_Margin" type="VBoxContainer" parent="Details/Stats_and_Texture/Stats/Stats_Container"]
margin_right = 7.0
margin_bottom = 174.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="Stat_Labels" type="VBoxContainer" parent="Details/Stats_and_Texture/Stats/Stats_Container"]
margin_left = 11.0
margin_right = 81.0
margin_bottom = 174.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Top_Margin" type="VBoxContainer" parent="Details/Stats_and_Texture/Stats/Stats_Container/Stat_Labels"]
margin_right = 70.0

[node name="HP" type="RichTextLabel" parent="Details/Stats_and_Texture/Stats/Stats_Container/Stat_Labels"]
margin_top = 4.0
margin_right = 70.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "HP:"
scroll_active = false

[node name="Mana" type="RichTextLabel" parent="Details/Stats_and_Texture/Stats/Stats_Container/Stat_Labels"]
margin_top = 31.0
margin_right = 70.0
margin_bottom = 55.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Mana:

"
scroll_active = false

[node name="Attack" type="RichTextLabel" parent="Details/Stats_and_Texture/Stats/Stats_Container/Stat_Labels"]
margin_top = 59.0
margin_right = 70.0
margin_bottom = 83.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Attack:
"
scroll_active = false

[node name="Defence" type="RichTextLabel" parent="Details/Stats_and_Texture/Stats/Stats_Container/Stat_Labels"]
margin_top = 87.0
margin_right = 70.0
margin_bottom = 111.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Defense:"
scroll_active = false

[node name="Speed" type="RichTextLabel" parent="Details/Stats_and_Texture/Stats/Stats_Container/Stat_Labels"]
margin_top = 115.0
margin_right = 70.0
margin_bottom = 139.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Speed:"
scroll_active = false

[node name="Magic" type="RichTextLabel" parent="Details/Stats_and_Texture/Stats/Stats_Container/Stat_Labels"]
margin_top = 143.0
margin_right = 70.0
margin_bottom = 167.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Magic:
"
scroll_active = false

[node name="Bottom_Margin" type="VBoxContainer" parent="Details/Stats_and_Texture/Stats/Stats_Container/Stat_Labels"]
margin_top = 171.0
margin_right = 70.0
margin_bottom = 174.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="Stat_Values" type="VBoxContainer" parent="Details/Stats_and_Texture/Stats/Stats_Container"]
margin_left = 85.0
margin_right = 205.0
margin_bottom = 174.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3

[node name="Top_Margin" type="VBoxContainer" parent="Details/Stats_and_Texture/Stats/Stats_Container/Stat_Values"]
margin_right = 120.0

[node name="HP" type="LineEdit" parent="Details/Stats_and_Texture/Stats/Stats_Container/Stat_Values"]
margin_top = 4.0
margin_right = 120.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 1 )
text = "0"
align = 1
max_length = 3

[node name="Mana" type="LineEdit" parent="Details/Stats_and_Texture/Stats/Stats_Container/Stat_Values"]
margin_top = 31.0
margin_right = 120.0
margin_bottom = 54.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/read_only = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "0"
align = 1
max_length = 3
context_menu_enabled = false
placeholder_text = "0"
caret_blink = true

[node name="Attack" type="LineEdit" parent="Details/Stats_and_Texture/Stats/Stats_Container/Stat_Values"]
margin_top = 58.0
margin_right = 120.0
margin_bottom = 81.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/read_only = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "0"
align = 1
max_length = 3
placeholder_text = "0"
caret_blink = true

[node name="Defence" type="LineEdit" parent="Details/Stats_and_Texture/Stats/Stats_Container/Stat_Values"]
margin_top = 85.0
margin_right = 120.0
margin_bottom = 108.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/read_only = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
text = "0"
align = 1
max_length = 3
placeholder_text = "0"
caret_blink = true

[node name="Speed" type="LineEdit" parent="Details/Stats_and_Texture/Stats/Stats_Container/Stat_Values"]
margin_top = 112.0
margin_right = 120.0
margin_bottom = 135.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/read_only = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
text = "0"
align = 1
max_length = 3
placeholder_text = "0"
caret_blink = true

[node name="Magic" type="LineEdit" parent="Details/Stats_and_Texture/Stats/Stats_Container/Stat_Values"]
margin_top = 139.0
margin_right = 120.0
margin_bottom = 163.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/read_only = SubResource( 14 )
custom_styles/focus = SubResource( 15 )
custom_styles/normal = SubResource( 16 )
text = "0"
align = 1
max_length = 3
placeholder_text = "0"
caret_blink = true

[node name="Bottom_Margin" type="VBoxContainer" parent="Details/Stats_and_Texture/Stats/Stats_Container/Stat_Values"]
margin_top = 167.0
margin_right = 120.0
margin_bottom = 174.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3

[node name="Texture" type="PanelContainer" parent="Details/Stats_and_Texture"]
margin_left = 214.0
margin_right = 424.0
margin_bottom = 178.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )

[node name="Entity_Display" type="CenterContainer" parent="Details/Stats_and_Texture/Texture"]
margin_left = 2.0
margin_top = 2.0
margin_right = 208.0
margin_bottom = 176.0

[node name="Slime" parent="Details/Stats_and_Texture/Texture/Entity_Display" instance=ExtResource( 5 )]
visible = false
margin_left = 103.0
margin_top = 87.0
margin_right = 103.0
margin_bottom = 87.0

[node name="Bob" parent="Details/Stats_and_Texture/Texture/Entity_Display" instance=ExtResource( 3 )]
visible = false
margin_left = 103.0
margin_top = 87.0
margin_right = 103.0
margin_bottom = 87.0

[node name="Glitch" parent="Details/Stats_and_Texture/Texture/Entity_Display" instance=ExtResource( 4 )]
visible = false
margin_left = 103.0
margin_top = 87.0
margin_right = 103.0
margin_bottom = 87.0

[node name="Information_Panel" type="PanelContainer" parent="Details"]
margin_top = 182.0
margin_right = 424.0
margin_bottom = 360.0
size_flags_vertical = 3

[node name="TextEdit" type="TextEdit" parent="Details/Information_Panel"]
margin_left = 2.0
margin_top = 2.0
margin_right = 422.0
margin_bottom = 176.0
custom_styles/normal = SubResource( 17 )
draw_tabs = true
wrap_enabled = true
caret_block_mode = true
caret_blink = true

[connection signal="item_selected" from="Entities/Entity_List" to="." method="_Entity_List_item_selected"]
[connection signal="pressed" from="Entities/SaveLoad/Save_Load/Save_Load/Save" to="." method="_save_changes"]
[connection signal="pressed" from="Entities/SaveLoad/Save_Load/Save_Load/Load" to="." method="_load_changes"]
[connection signal="pressed" from="Entities/SaveLoad/Save_Load/Add_Remove/Add" to="." method="_on_Add_pressed"]
[connection signal="pressed" from="Entities/SaveLoad/Save_Load/Add_Remove/Remove" to="." method="_on_Remove_pressed"]
[connection signal="pressed" from="Entities/SaveLoad/Save_Load/Rename_Exit/Rename" to="." method="_on_Rename_pressed"]
[connection signal="pressed" from="Entities/SaveLoad/Save_Load/Rename_Exit/Exit" to="." method="_on_Exit_pressed"]
